--- a/app/src/main/res/layout/activity_grid.xml
+++ b/app/src/main/res/layout/activity_grid.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GridActivity">
+    tools:context=".GridActivity"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="-50dp">
 
     <TextView
         android:id="@+id/textViewXplain"
@@ -23,8 +25,8 @@
 
     <GridLayout
         android:id="@+id/grid_layout"
-        android:layout_width="120dp"
-        android:layout_height="240dp"
+        android:layout_width="175dp"
+        android:layout_height="350dp"
         android:layout_marginTop="50dp"
         android:columnCount="2"
         android:foregroundGravity="center"
@@ -175,26 +177,44 @@
 
     <ImageView
         android:id="@+id/plant_pot_icon"
-        android:layout_width="50dp"
+        android:background="@drawable/filled"
+        android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_centerInParent="true"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="16dp"
         android:src="@drawable/ic_pot"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.404"
+        app:layout_constraintHorizontal_bias="0.044"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/trash_icon"
-        android:layout_width="50dp"
+        android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_centerInParent="true"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/filled"
         android:src="@drawable/ic_trash"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.598"
+        app:layout_constraintHorizontal_bias="0.411"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button_set"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/filled"
+        android:text="configurazione completata!"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.938"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_conversion_absoluteHeight="48dp"
+        tools:layout_conversion_absoluteWidth="88dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
